fix(dropdown): add top margin to dropdown title for spacing below logout

--- a/src/components/controls/dropdown/dropdown.module.scss
+++ b/src/components/controls/dropdown/dropdown.module.scss
@@ -47,6 +47,7 @@
 
 .dropdownTitle {
   border-top: solid 1px var(--color-neutral-200);
+  margin-top: var(--spacing-200);
 
   > p {
     padding: var(--spacing-300) var(--spacing-400) 0 var(--spacing-400);
